--- a/public/index.html
+++ b/public/index.html
@@ -79,13 +79,13 @@
   </head>
 
   
-  
-  <script>
+<!-- Do not delete this. This changes http -> https.
+<script>
 if (location.protocol != 'https:') {
  location.href = 'https:' + window.location.href.substring(window.location.protocol.length);
 }
-    
-</script>
+</script> 
+-->
   
   
   <body id="home">
