--- a/public/blog.html
+++ b/public/blog.html
@@ -45,8 +45,8 @@
       href="https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Ftechnology.png?v=1588815892670"
     />
 
-    <link href="/styles/blog.css" rel="stylesheet" type="text/css" />
     <link href="/styles/shared.css" rel="stylesheet" type="text/css" />
+    <link href="/styles/blog.css" rel="stylesheet" type="text/css" />
 
     <script
       type="text/javascript"
@@ -173,7 +173,7 @@
       </div>
     </header>
 
-    <div class="about">
+    <main class="container--md">
       <article>
         <h4>April 7th, 2021</h4>
         <h2>💨 v0.2 Update Coming Soon</h2>
@@ -405,7 +405,7 @@
           "Just might want to warn your roommate first." Product Hunt
         </blockquote>
       </section>
-    </div>
+    </main>
 
     <!-- New Footer (Sonny) -->
     <footer>
