--- a/public/faq.html
+++ b/public/faq.html
@@ -45,8 +45,9 @@
       href="https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Ftechnology.png?v=1588815892670"
     />
 
-    <link href="/styles/faq.css" rel="stylesheet" type="text/css" />
+    <link href="/styles/vendor.css" rel="stylesheet" type="text/css" />
     <link href="/styles/shared.css" rel="stylesheet" type="text/css" />
+    <link href="/styles/faq.css" rel="stylesheet" type="text/css" />
 
     <script
       type="text/javascript"
@@ -163,131 +164,138 @@
       </div>
     </header>
 
-    <div class="about">
+    <main class="container--md">
       <h1>💬 Frequently Asked Questions</h1>
+      <div class="collapse-area">
+        <button type="button" class="collapse-button collapsible">
+          Do I need a microphone for Karaoke Nite?
+        </button>
 
-      <button type="button" class="collapsible">
-        Do I need a microphone for Karaoke Nite?
-      </button>
+        <div class="collapse-content content">
+          <p>
+            While you don't need a handheld microphone for Karaoke Nite, it
+            certainly makes the experience better!
+          </p>
 
-      <div class="content">
-        <p>
-          While you don't need a handheld microphone for Karaoke Nite, it
-          certainly makes the experience better!
-        </p>
+          <p>Here are some microphones that we recommend:</p>
 
-        <p>Here are some microphones that we recommend:</p>
-
-        <ul>
-          <li>
-            $49.99
-            <a
-              href="https://www.amazon.com/Singing-Machine-Bluetooth-Microphone-CPK545/dp/B07SLFVGSC/"
-              target="_blank"
-            >
-              Carpool Karaoke Mic</a
-            >
-            <!--             ($49.99) -->
-          </li>
-          <li>
-            $16.99
-            <a
-              href="https://www.amazon.com/Handheld-Microphone-Nintendo-Singing-Compatible/dp/B08K6WXR29"
-              target="_blank"
-            >
-              USB Handheld Microphone</a
-            >
-            <!--             ($16.99) -->
-          </li>
-        </ul>
-        <p>
-          P.S. We are working on a new and innovative way to sing without using
-          a professional microphone (*cough QR code and mobile), keep on the
-          look out for a feature update!
-        </p>
+          <ul>
+            <li>
+              $49.99
+              <a
+                href="https://www.amazon.com/Singing-Machine-Bluetooth-Microphone-CPK545/dp/B07SLFVGSC/"
+                target="_blank"
+              >
+                Carpool Karaoke Mic</a
+              >
+              <!--             ($49.99) -->
+            </li>
+            <li>
+              $16.99
+              <a
+                href="https://www.amazon.com/Handheld-Microphone-Nintendo-Singing-Compatible/dp/B08K6WXR29"
+                target="_blank"
+              >
+                USB Handheld Microphone</a
+              >
+              <!--             ($16.99) -->
+            </li>
+          </ul>
+          <p>
+            P.S. We are working on a new and innovative way to sing without
+            using a professional microphone (*cough QR code and mobile), keep on
+            the look out for a feature update!
+          </p>
+        </div>
       </div>
 
-      <button type="button" class="collapsible">
-        How do I connect my microphone to the PC?
-      </button>
-      <div class="content">
-        <p>You can do this in three simple steps:</p>
-        <ol>
-          <li>Charge the microphone unit or make sure there's battery.</li>
-          <li>
-            Plug the other end of the cable into computer USB port or AUX port.
-          </li>
-          <li>
-            Go to audio settings on your computer and set as input device.
-          </li>
-        </ol>
+      <div class="collapse-area">
+        <button type="button" class="collapse-button collapsible">
+          How do I connect my microphone to the PC?
+        </button>
+        <div class="collapse-content content">
+          <p>You can do this in three simple steps:</p>
+          <ol>
+            <li>Charge the microphone unit or make sure there's battery.</li>
+            <li>
+              Plug the other end of the cable into computer USB port or AUX
+              port.
+            </li>
+            <li>
+              Go to audio settings on your computer and set as input device.
+            </li>
+          </ol>
 
-        <p>
-          <b>Please note:</b>
-        </p>
+          <p>
+            <b>Please note:</b>
+          </p>
 
-        <p>
-          Due to Covid-19, we discourage all users from sharing microphones with
-          friends & hope everyone adopt a good microphone hygiene routine!
-        </p>
+          <p>
+            Due to Covid-19, we discourage all users from sharing microphones
+            with friends & hope everyone adopt a good microphone hygiene
+            routine!
+          </p>
+        </div>
       </div>
+      <div class="collapse-area">
+        <button type="button" class="collapse-button collapsible">
+          How do I hear myself through the speakers?
+        </button>
 
-      <button type="button" class="collapsible">
-        How do I hear myself through the speakers?
-      </button>
+        <div class="collapse-content content">
+          <p>Windows users:</p>
+          <ol>
+            <li>Click on "Spearkers" in the taskbar.</li>
+            <li>
+              Click on "Sound" and make sure your microphone is set as the
+              default.
+            </li>
+            <li>Click on "Recording".</li>
+            <li>Check the "Listen to this device" box.</li>
+          </ol>
 
-      <div class="content">
-        <p>Windows users:</p>
-        <ol>
-          <li>Click on "Spearkers" in the taskbar.</li>
-          <li>
-            Click on "Sound" and make sure your microphone is set as the
-            default.
-          </li>
-          <li>Click on "Recording".</li>
-          <li>Check the "Listen to this device" box.</li>
-        </ol>
-
-        <p>Mac users:</p>
-        <ol>
-          <li>Open QuickTime Player.</li>
-          <li>Click "File" ➡ "New Audio Recording".</li>
-          <li>
-            Move the volume bar higher and higher until you can hear yourself.
-          </li>
-        </ol>
+          <p>Mac users:</p>
+          <ol>
+            <li>Open QuickTime Player.</li>
+            <li>Click "File" ➡ "New Audio Recording".</li>
+            <li>
+              Move the volume bar higher and higher until you can hear yourself.
+            </li>
+          </ol>
+        </div>
       </div>
+      <div>
+        <button type="button" class="collapsible">
+          What are the new updates?
+        </button>
 
-      <button type="button" class="collapsible">
-        What are the new updates?
-      </button>
+        <div class="content">
+          <h3>v0.2 is currently in production! Scoped to launch in May.</h3>
 
-      <div class="content">
-        <h3>v0.2 is currently in production! Scoped to launch in May.</h3>
+          <h4>Release Build v0.1.3</h4>
 
-        <h4>Release Build v0.1.3</h4>
+          <p>🆕 Added a /faq page.</p>
+          <p>🏗 Updated /about page.</p>
+          <p>🏗 Cleaned up the codebase in preparation of v0.2.</p>
+          <p>💸 Compiled the pre-seed pitch deck.</p>
 
-        <p>🆕 Added a /faq page.</p>
-        <p>🏗 Updated /about page.</p>
-        <p>🏗 Cleaned up the codebase in preparation of v0.2.</p>
-        <p>💸 Compiled the pre-seed pitch deck.</p>
+          <h4>Release Build v0.1.2</h4>
 
-        <h4>Release Build v0.1.2</h4>
+          <p>
+            🆕 Added a Privacy Policy. Thanks, Min-Kyu! 🆕 Added demo video. 🆕
+            Added release notes.
+          </p>
+          <p>🆕 Added blog posts.</p>
+          <p>🏗 Removed Patreon links.</p>
+          <p>🐛 Fixed the "Let's Get It On" autoplay bug.</p>
 
-        <p>
-          🆕 Added a Privacy Policy. Thanks, Min-Kyu! 🆕 Added demo video. 🆕
-          Added release notes.
-        </p>
-        <p>🆕 Added blog posts.</p>
-        <p>🏗 Removed Patreon links.</p>
-        <p>🐛 Fixed the "Let's Get It On" autoplay bug.</p>
+          <h4>Release Build v0.1.1</h4>
 
-        <h4>Release Build v0.1.1</h4>
-
-        <p>🆕 Added floating animation to the stars on the landing page.</p>
-        <p>🆕 Added hover effects to anchor links.</p>
-        <p>🆕 Added a /blog page.</p>
-        <p>🐛 Fixed social channel links bug in the footer.</p>
+          <p>🆕 Added floating animation to the stars on the landing page.</p>
+          <p>🆕 Added hover effects to anchor links.</p>
+          <p>🆕 Added a /blog page.</p>
+          <p>🐛 Fixed social channel links bug in the footer.</p>
+        </div>
       </div>
 
       <script>
@@ -307,18 +315,19 @@
         }
       </script>
 
-      <p>
-        Let us know if you have other questions
-        <a href="mailto: sonnynomnom@gmail.com">here</a>.
-      </p>
-
+      <div class="section--callout">
+        <p>
+          Let us know if you have other questions
+          <a href="mailto: sonnynomnom@gmail.com">here</a>.
+        </p>
+      </div>
       <div class="shoutout-embed" data-wall="karaoke_nite"></div>
       <script
         class="shoutout-script"
         src="https://embed.shoutout.so/embed.js"
         defer
       ></script>
-    </div>
+    </main>
 
     <!-- New Footer (Sonny) -->
     <footer>
