--- a/public/about.html
+++ b/public/about.html
@@ -174,87 +174,93 @@
     </header>
 
     <main class="container--md">
-      <article>
-        <h1>
-          Karaoke Nite is a social app. Our north star is to create the next-gen
-          <span style="color: #ff8647">h</span
-          ><span style="color: #ff93ad">o</span
-          ><span style="color: #df73ff">u</span
-          ><span style="color: #fe3466">s</span
-          ><span style="color: #5cdc89">e</span>
+      <section class="article-grid">
+        <article>
+          <h1>
+            Karaoke Nite is a social app. Our north star is to create the
+            next-gen
+            <span style="color: #ff8647">h</span
+            ><span style="color: #ff93ad">o</span
+            ><span style="color: #df73ff">u</span
+            ><span style="color: #fe3466">s</span
+            ><span style="color: #5cdc89">e</span>
 
-          <span style="color: #ff8647">p</span
-          ><span style="color: #f4ca2c">a</span
-          ><span style="color: #93d4a8">r</span
-          ><span style="color: #51e8e4">t</span
-          ><span style="color: #df73ff">y</span>.
-        </h1>
+            <span style="color: #ff8647">p</span
+            ><span style="color: #f4ca2c">a</span
+            ><span style="color: #93d4a8">r</span
+            ><span style="color: #51e8e4">t</span
+            ><span style="color: #df73ff">y</span>.
+          </h1>
 
-        <hr class="fancyLine" />
+          <hr class="fancyLine" />
 
-        <p class="description">
-          At Karaoke Nite, we believe that singing with friends is way more fun
-          than humming by yourself, in the shower or on a mobile app.
-        </p>
+          <p class="description">
+            At Karaoke Nite, we believe that singing with friends is way more
+            fun than humming by yourself, in the shower or on a mobile app.
+          </p>
 
-        <p class="description">
-          Whether you are getting silly together because of a birthday or
-          heartbreak, happy hour or a casual hang, we are here to help you have
-          a good time.
-        </p>
-      </article>
-      <article>
-        <h2>Beta v0.1.3</h2>
+          <p class="description">
+            Whether you are getting silly together because of a birthday or
+            heartbreak, happy hour or a casual hang, we are here to help you
+            have a good time.
+          </p>
+        </article>
+        <article>
+          <h2>Beta v0.1.3</h2>
 
-        <p>We are a small team of friends based in Brooklyn, NY.</p>
+          <p>We are a small team of friends based in Brooklyn, NY.</p>
 
-        <p>
-          This is currently a Beta version of the app. We have a ton of features
-          and goodies coming soon so stay tuned. In the meantime, please help us
-          make the experience better by answering a quick
-          <a href="https://karaokenite.typeform.com/to/SaHxnvyT" target="_blank"
-            >feedback survey</a
-          >.
-        </p>
+          <p>
+            This is currently a Beta version of the app. We have a ton of
+            features and goodies coming soon so stay tuned. In the meantime,
+            please help us make the experience better by answering a quick
+            <a
+              href="https://karaokenite.typeform.com/to/SaHxnvyT"
+              target="_blank"
+              >feedback survey</a
+            >.
+          </p>
 
-        <p>
-          Karaoke Nite is also open-sourced. If you are a programmer, designer,
-          3d modeler, or game artist, you can find the project on our
-          <a href="https://github.com/karaokenite" target="_blank">GitHub</a>.
-        </p>
-      </article>
+          <p>
+            Karaoke Nite is also open-sourced. If you are a programmer,
+            designer, 3d modeler, or game artist, you can find the project on
+            our
+            <a href="https://github.com/karaokenite" target="_blank">GitHub</a>.
+          </p>
+        </article>
 
-      <article>
-        <h2>Record Labels & Artists</h2>
-        <p>
-          If you are a indie record label or band/artist that's interested in
-          having your music videos or lyric videos be featured in the app,
-          please let us know via
-          <a href="mailto: sonnynomnom@gmail.com">email</a>.
-        </p>
-      </article>
-      <article>
-        <h2>Legal</h2>
+        <article>
+          <h2>Record Labels & Artists</h2>
+          <p>
+            If you are a indie record label or band/artist that's interested in
+            having your music videos or lyric videos be featured in the app,
+            please let us know via
+            <a href="mailto: sonnynomnom@gmail.com">email</a>.
+          </p>
+        </article>
+        <article>
+          <h2>Legal</h2>
 
-        <p>
-          The Beta was soft launched in Q4 2020 with 50 karaoke soundtracks
-          featured in the app. All soundtracks have been lawfully purchased
-          (proof of purchase can be requested). If people enjoy the app and want
-          to see it continue to grow, we will work with a copyright lawyer to
-          purchase more licenses and add music videos to our collection.
-        </p>
+          <p>
+            The Beta was soft launched in Q4 2020 with 50 karaoke soundtracks
+            featured in the app. All soundtracks have been lawfully purchased
+            (proof of purchase can be requested). If people enjoy the app and
+            want to see it continue to grow, we will work with a copyright
+            lawyer to purchase more licenses and add music videos to our
+            collection.
+          </p>
 
-        <p>
-          Privacy Policy can be found
-          <a
-            href="https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2FPrivacy%20Policy%20v1.pdf?v=1616300368184"
-            target="_blank"
-            >here</a
-          >.
-        </p>
-      </article>
-
-      <section>
+          <p>
+            Privacy Policy can be found
+            <a
+              href="https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2FPrivacy%20Policy%20v1.pdf?v=1616300368184"
+              target="_blank"
+              >here</a
+            >.
+          </p>
+        </article>
+      </section>
+      <section class="section--callout">
         <blockquote>
           "Karaoke is probably the only correct use case for VR." Jenn Schiffer,
           Glitch
