More class names

--- a/public/scene.html
+++ b/public/scene.html
@@ -725,7 +725,7 @@
 
     <h1 id="scene-logo">
       <a href="https://karaokenite.co" target="_blank"> KARAOKE NITE </a>
-      <span class="tag-tilt">beta</span>
+      <span class="brand-betatag">beta</span>
     </h1>
 
     <!-- Invite Modal -->
