--- a/public/blog.html
+++ b/public/blog.html
@@ -89,88 +89,66 @@
   </head>
 
   <body>
-    <a
-      href="https://github.com/karaokenite"
-      class="github-corner"
-      aria-label="View source on GitHub"
-      ><svg
-        class="github-corner-logo"
-        width="80"
-        height="80"
-        viewbox="0 0 250 250"
-        style="
-          fill: #151513;
-          color: #fff;
-          position: absolute;
-          top: 0;
-          border: 0;
-          right: 0;
-        "
-        aria-hidden="true"
+    <div>
+      <a
+        href="https://github.com/karaokenite"
+        class="github-corner"
+        aria-label="View source on GitHub"
       >
-        <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
-        <path
-          d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2"
-          fill="currentColor"
-          style="transform-origin: 130px 106px"
-          class="octo-arm"
-        ></path>
-        <path
-          d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z"
-          fill="currentColor"
-          class="octo-body"
-        ></path></svg></a
-    ><style>
-      .github-corner:hover .octo-arm {
-        animation: octocat-wave 560ms ease-in-out;
-      }
-      @keyframes octocat-wave {
-        0%,
-        100% {
-          transform: rotate(0);
-        }
-        20%,
-        60% {
-          transform: rotate(-25deg);
-        }
-        40%,
-        80% {
-          transform: rotate(10deg);
-        }
-      }
-      @media (max-width: 500px) {
-        .github-corner:hover .octo-arm {
-          animation: none;
-        }
-        .github-corner .octo-arm {
-          animation: octocat-wave 560ms ease-in-out;
-        }
-      }
-    </style>
-
-    <!-- Header -->
-    <!--     <header>
-      <span class="logo"><a href="https://karaokenite.co">Karaoke Nite</a></span>
-      
-      <ul>
-        <li><a href="/about.html">About</a></li>
-        <li><a href="#">Blog</a></li>
-      </ul>
-    </header> -->
+        <svg
+          class="github-corner-logo"
+          width="80"
+          height="80"
+          viewbox="0 0 250 250"
+          style="
+            fill: #151513;
+            color: #fff;
+            position: absolute;
+            top: 0;
+            border: 0;
+            right: 0;
+          "
+          aria-hidden="true"
+        >
+          <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
+          <path
+            d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2"
+            fill="currentColor"
+            style="transform-origin: 130px 106px"
+            class="octo-arm"
+          ></path>
+          <path
+            d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z"
+            fill="currentColor"
+            class="octo-body"
+          ></path>
+        </svg>
+      </a>
+    </div>
 
     <header role="banner">
-      <div class="header--contents">
-        <h1 class="logo">
-          <a href="https://karaokenite.co"> KARAOKE NITE </a>
-          <span class="tag-tilt">beta</span>
-        </h1>
+      <nav class="navigation">
+        <a class="navigation-link--home" href="https://karaokenite.co">
+          <h1 class="brand-logo">
+            KARAOKE NITE
+            <span class="brand-betatag">beta</span>
+          </h1>
+        </a>
 
-        <span class="page-link about grow"><a href="about.html">About</a></span>
-        <span class="page-link blog"
-          ><a href="blog.html" class="highlighted">Blog</a></span
-        >
-        <span class="page-link faq grow"><a href="faq.html">FAQ</a></span>
-      </div>
+        <ul class="navigation-list">
+          <li class="navigation-item">
+            <a class="navigation-link" href="about.html">About</a>
+          </li>
+          <li class="navigation-item">
+            <a href="blog.html" class="navigation-link navigation-link__active"
+              >Blog</a
+            >
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="faq.html">FAQ</a>
+          </li>
+        </ul>
+      </nav>
     </header>
 
     <main class="container--md">
@@ -308,9 +286,10 @@
             getting us here.
           </p>
 
-          <div id="members">
-            <div class="member">
+          <div id="members" class="member-list">
+            <div class="member-item">
               <img
+                class="member-avatar"
                 src="https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fsonny.png?v=1596248195534"
                 alt="@sonnynomnom<"
               />
@@ -318,8 +297,9 @@
                 ><div class="memberlabel">@sonnynomnom</div></a
               >
             </div>
-            <div class="member">
+            <div class="member-item">
               <img
+                class="member-avatar"
                 src="https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fjackieliu.jpg?v=1596248186734"
                 alt="@jackieis_online"
               />
@@ -327,8 +307,9 @@
                 ><div class="memberlabel">@jackieis_online</div></a
               >
             </div>
-            <div class="member">
+            <div class="member-item">
               <img
+                class="member-avatar"
                 src="https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fjosh.jpg?v=1596248189591"
                 alt="@joshuakgoldberg"
               />
@@ -336,8 +317,9 @@
                 ><div class="memberlabel">@joshuakgoldberg</div></a
               >
             </div>
-            <div class="member">
+            <div class="member-item">
               <img
+                class="member-avatar"
                 src="https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Firlfede.jpg?v=1596248192436"
                 alt="@irlfede<"
               />
@@ -345,8 +327,9 @@
                 ><div class="memberlabel">@irlfede</div></a
               >
             </div>
-            <div class="member">
+            <div class="member-item">
               <img
+                class="member-avatar"
                 src="https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fmicaela.jpg?v=1596248304793"
                 alt="@micaelars"
               />
@@ -410,8 +393,8 @@
     </main>
 
     <!-- New Footer (Sonny) -->
-    <footer>
-      <div id="footer--content">
+    <footer class="footer">
+      <div class="footer-container">
         <div class="footer-left">
           <span id="footer-name">KARAOKE NITE</span>
           Made with <span aria-label="love" role="img">💖</span> in Brooklyn, NY
