--- a/public/index.html
+++ b/public/index.html
@@ -105,49 +105,64 @@ if (location.protocol != 'https:') {
 -->
 
   <body id="home">
-    <a
-      href="https://github.com/karaokenite"
-      class="github-corner"
-      aria-label="View source on GitHub"
-      ><svg
-        class="github-corner-logo"
-        width="80"
-        height="80"
-        viewbox="0 0 250 250"
-        style="
-          fill: white;
-          color: var(--color-midnight);
-          position: absolute;
-          top: 0;
-          border: 0;
-          right: 0;
-        "
-        aria-hidden="true"
+    <div>
+      <a
+        href="https://github.com/karaokenite"
+        class="github-corner"
+        aria-label="View source on GitHub"
       >
-        <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
-        <path
-          d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2"
-          fill="currentColor"
-          style="transform-origin: 130px 106px"
-          class="octo-arm"
-        ></path>
-        <path
-          d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z"
-          fill="currentColor"
-          class="octo-body"
-        ></path></svg></a
-    ><style></style>
+        <svg
+          class="github-corner-logo"
+          width="80"
+          height="80"
+          viewbox="0 0 250 250"
+          style="
+            fill: #151513;
+            color: #fff;
+            position: absolute;
+            top: 0;
+            border: 0;
+            right: 0;
+          "
+          aria-hidden="true"
+        >
+          <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
+          <path
+            d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2"
+            fill="currentColor"
+            style="transform-origin: 130px 106px"
+            class="octo-arm"
+          ></path>
+          <path
+            d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z"
+            fill="currentColor"
+            class="octo-body"
+          ></path>
+        </svg>
+      </a>
+    </div>
 
     <header role="banner">
-      <div class="header--contents">
-        <h1 class="logo">
-          KARAOKE NITE
-          <span class="tag-tilt">beta</span>
-        </h1>
-        <span class="page-link about grow"><a href="about.html">About</a></span>
-        <span class="page-link blog grow"><a href="blog.html">Blog</a></span>
-        <span class="page-link faq grow"><a href="faq.html">FAQ</a></span>
-      </div>
+      <nav class="navigation">
+        <a class="navigation-link--home" href="https://karaokenite.co">
+          <h1 class="brand-logo">
+            KARAOKE NITE
+            <span class="brand-betatag">beta</span>
+          </h1>
+        </a>
+
+        <ul class="navigation-list">
+          <li class="navigation-item">
+            <a class="navigation-link" href="about.html">About</a>
+          </li>
+          <li class="navigation-item">
+            <a href="blog.html" class="navigation-link">Blog</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="faq.html">FAQ</a>
+          </li>
+        </ul>
+      </nav>
     </header>
 
     <main>
@@ -155,25 +170,25 @@ if (location.protocol != 'https:') {
         <div class="hero-bg"></div>
         <div class="hero-container">
           <img
-            class="hero-bg-img star1 floating"
+            class="hero-bg-img star1 floating floating--short"
             src="https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fstar1.png?v=1591917657267"
           />
           <img
-            class="hero-bg-img star2 floating2"
+            class="hero-bg-img star2 floating floating--long"
             src="https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fstar2.png?v=1591917657953"
           />
           <img
-            class="hero-bg-img star4 floating"
+            class="hero-bg-img star4 floating floating--short"
             src="https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fstar4.png?v=1596993367347"
           />
 
           <div class="hero-container--overflow">
             <img
-              class="hero-bg-img star3 floating2"
+              class="hero-bg-img star3 floating floating--long"
               src="https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fstar3.png?v=1591917657757"
             />
             <img
-              class="hero-bg-img star5 floating2"
+              class="hero-bg-img star5 floating floating--long"
               src="https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fstar5.png?v=1591917657427"
             />
             <img
@@ -198,7 +213,6 @@ if (location.protocol != 'https:') {
             <h2>JOIN A ROOM (FREE)</h2>
             <form action="/scene.html" method="GET">
               <div>
-                <!-- <label for="name">Choose a room name</label> -->
                 <input
                   id="room"
                   name="room"
@@ -208,7 +222,6 @@ if (location.protocol != 'https:') {
                 />
               </div>
               <div>
-                <!-- <label for="username">Choose a username</label> -->
                 <input
                   id="username"
                   name="username"
@@ -253,7 +266,6 @@ if (location.protocol != 'https:') {
                 </label>
               </div>
             </form>
-            <!--             <a href="/">Join a friend's room instead.</a> -->
           </div>
         </div>
       </section>
@@ -355,7 +367,7 @@ if (location.protocol != 'https:') {
         </ol>
       </section>
 
-      <section id="recap">
+      <section id="recap" class="light">
         <div class="bg"></div>
         <div class="section--content recap--contents">
           <p class="recap--description">
@@ -402,9 +414,9 @@ if (location.protocol != 'https:') {
     </main>
 
     <!-- New Footer (Sonny) -->
-    <footer>
+    <footer class="footer">
       <div class="footer-bg">
-        <div id="footer--content">
+        <div class="footer-container">
           <div class="footer-left">
             <span id="footer-name">KARAOKE NITE</span><br />
             Made with <span aria-label="love" role="img">💖</span> in Brooklyn,
@@ -446,11 +458,6 @@ if (location.protocol != 'https:') {
                   src="https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fgithub-logo.svg?v=1597727187892"
               /></a>
             </div>
-
-            <!--         <div class="column">
-          <a href="https://www.patreon.com/karaokenite" target="_blank">
-          <img class="social" src="https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fpatreon-logo.svg?v=1597727187995"></a>
-        </div> -->
 
             <div class="column">
               <a href="https://discord.gg/xUc8m25" target="_blank">
