--- a/public/about.html
+++ b/public/about.html
@@ -102,7 +102,7 @@
           viewbox="0 0 250 250"
           style="
             fill: #151513;
-            color: #fff;
+            color: var(--color-linen);
             position: absolute;
             top: 0;
             border: 0;
@@ -126,9 +126,9 @@
       </a>
     </div>
 
-    <header role="banner">
+    <header role="banner" class="header">
       <nav class="navigation">
-        <a class="navigation-link--home" href="https://karaokenite.co">
+        <a class="navigation-link__home" href="https://karaokenite.co">
           <h1 class="brand-logo">
             KARAOKE NITE
             <span class="brand-betatag">beta</span>
