--- a/public/about.html
+++ b/public/about.html
@@ -4,6 +4,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title>About | Karaoke Nite</title>
 
@@ -127,24 +128,26 @@
     </div>
 
     <header role="banner" class="header">
-      <nav class="navigation">
-        <a class="navigation-link__home" href="https://karaokenite.co">
+      <div class="header-navlogo">
+      <div class="header-nav">
+        <a class="header-navlink__home" href="https://karaokenite.co">
           <h1 class="brand-logo">
             KARAOKE NITE
             <span class="brand-betatag">beta</span>
           </h1>
         </a>
-        <ul class="navigation-list">
-          <li class="navigation-item">
-            <a class="navigation-link navigation-link__active" href="about.html"
+      </div>
+        <ul class="header-navlist">
+          <li class="header-navitem">
+            <a class="header-navlink header-navlink__active" href="about.html"
               >About</a
             >
           </li>
-          <li class="navigation-item">
-            <a href="blog.html" class="navigation-link">Blog</a>
+          <li class="header-navitem">
+            <a href="blog.html" class="header-navlink">Blog</a>
           </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="faq.html">FAQ</a>
+          <li class="header-navitem">
+            <a class="header-navlink" href="faq.html">FAQ</a>
           </li>
         </ul>
       </nav>
