--- a/public/index.html
+++ b/public/index.html
@@ -143,23 +143,25 @@ if (location.protocol != 'https:') {
     </div>
 
     <header role="banner" class="header">
-      <nav class="navigation">
-        <a class="navigation-link__home" href="https://karaokenite.co">
-          <h1 class="brand-logo">
-            KARAOKE NITE
-            <span class="brand-betatag">beta</span>
-          </h1>
-        </a>
+      <nav class="header-nav">
+        <div class="header-navlogo">
+          <a class="header-navlink__home" href="https://karaokenite.co">
+            <h1 class="brand-logo">
+              KARAOKE NITE
+              <span class="brand-betatag">beta</span>
+            </h1>
+          </a>
+        </div>
 
-        <ul class="navigation-list">
-          <li class="navigation-item">
-            <a class="navigation-link" href="about.html">About</a>
+        <ul class="header-navlist">
+          <li class="header-navitem">
+            <a class="header-navlink" href="about.html">About</a>
           </li>
-          <li class="navigation-item">
-            <a href="blog.html" class="navigation-link">Blog</a>
+          <li class="header-navitem">
+            <a href="blog.html" class="header-navlink">Blog</a>
           </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="faq.html">FAQ</a>
+          <li class="header-navitem">
+            <a class="header-navlink" href="faq.html">FAQ</a>
           </li>
         </ul>
       </nav>
@@ -168,7 +170,7 @@ if (location.protocol != 'https:') {
     <main>
       <section class="hero" id="hero">
         <div class="hero-bg"></div>
-        <div class="hero-container">
+        <div class="hero-images">
           <img
             class="hero-bg-img star1 floating floating--short"
             src="https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fstar1.png?v=1591917657267"
