--- a/public/index.html
+++ b/public/index.html
@@ -200,7 +200,7 @@ if (location.protocol != 'https:') {
           </div>
         </div>
         <div class="section--content join-container hero--content">
-          <div>
+          <div class="join-callout">
             <img
               class="join-image"
               alt="Placeholder1"
