--- a/public/about.html
+++ b/public/about.html
@@ -128,15 +128,16 @@
     </div>
 
     <header role="banner" class="header">
-      <div class="header-navlogo">
-      <div class="header-nav">
-        <a class="header-navlink__home" href="https://karaokenite.co">
-          <h1 class="brand-logo">
-            KARAOKE NITE
-            <span class="brand-betatag">beta</span>
-          </h1>
-        </a>
-      </div>
+      <nav class="header-nav">
+        <div class="header-navlogo">
+          <a class="header-navlink__home" href="https://karaokenite.co">
+            <h1 class="brand-logo">
+              KARAOKE NITE
+              <span class="brand-betatag">beta</span>
+            </h1>
+          </a>
+        </div>
+
         <ul class="header-navlist">
           <li class="header-navitem">
             <a class="header-navlink header-navlink__active" href="about.html"
