remove product hunt underline

--- a/public/blog.html
+++ b/public/blog.html
@@ -206,6 +206,7 @@
           <a
             href="https://www.producthunt.com/posts/karaoke-nite?utm_source=badge-featured&utm_medium=badge&utm_souce=badge-karaoke-nite"
             target="_blank"
+            class="link__plain"
             ><img
               src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=287216&theme=light"
               alt="Karaoke Nite - Karaoke with friends together on the web or in VR | Product Hunt"
