--- a/public/index.html
+++ b/public/index.html
@@ -358,14 +358,13 @@ if (location.protocol != 'https:') {
         </ol>
       </section>
 
-      <section id="recap" class="light">
-        <div class="bg"></div>
-        <div class="section--content recap--contents">
-          <p class="recap--description">
+      <section id="recap" class="recap light">
+        <div class="section--content recap-contents">
+          <p class="recap-description">
             Looking for something to do with friends during quarantine?
             <br />Have a Karaoke Nite!
           </p>
-          <a class="recap--link button" href="#top">Create a Room</a>
+          <a class="recap-link button" href="#top">Create a Room</a>
         </div>
       </section>
 
